--- a/tinyERP/tinyERP/Views/BudgetView.xaml
+++ b/tinyERP/tinyERP/Views/BudgetView.xaml
@@ -25,6 +25,7 @@
         
         <StackPanel Grid.Column="0" Orientation="Vertical">
             <TextBlock FontSize="40" Margin="10" Height="auto">Budgetverwaltung</TextBlock>
+            <Button></Button>
             <TextBlock Text="{Binding Budget.Year, StringFormat=Ausgewählte Periode: {0}}"/>
             <TextBlock Text="{Binding Budget.Amount, StringFormat=Gesamtbudget: {0:C}}" />
             <TextBlock Text="{Binding AllExpensesTotal, StringFormat=Ausgaben: {0:C}}" />
