Go on with validation

--- a/tinyERP/tinyERP/Resources/Brushes.xaml
+++ b/tinyERP/tinyERP/Resources/Brushes.xaml
@@ -4,4 +4,5 @@
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}" />
     <SolidColorBrush x:Key="PopupWindowBrush" Color="{StaticResource PopupWindowBackgroundColor}" />
     <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="{StaticResource DataGridBackgroundColor}" />
+    <SolidColorBrush x:Key="TextBoxFocusBorderBrush" Color="{StaticResource TextBoxFocusBorderColor}"/>
 </ResourceDictionary>
