--- a/tinyERP/tinyERP/Resources/Colors.xaml
+++ b/tinyERP/tinyERP/Resources/Colors.xaml
@@ -18,5 +18,6 @@
     <Color x:Key="BorderColor">Black</Color>
     <Color x:Key="PopupWindowBackgroundColor">Aliceblue</Color>
     <Color x:Key="DataGridBackgroundColor">#E6E6E6</Color>
+    <Color x:Key="TextBoxFocusBorderColor">#00AF00</Color>
 
 </ResourceDictionary>
