--- a/tinyERP/tinyERP/Views/BudgetView.xaml
+++ b/tinyERP/tinyERP/Views/BudgetView.xaml
@@ -25,12 +25,14 @@
         
         <StackPanel Grid.Column="0" Orientation="Vertical">
             <TextBlock FontSize="40" Margin="10" Height="auto">Budgetverwaltung</TextBlock>
-            <Button></Button>
-            <TextBlock Text="{Binding Budget.Year, StringFormat=Ausgewählte Periode: {0}}"/>
-            <TextBlock Text="{Binding Budget.Amount, StringFormat=Gesamtbudget: {0:C}}" />
+            <controls:SplitButton ItemsSource="{Binding BudgetList}" SelectedItem="{Binding Budget}" DisplayMemberPath="Year"
+                                  ToolTip="Budgetperiode auswählen" Margin="10"/>
+            <TextBlock Text="{Binding Budget.Expenses, StringFormat=Budgetierte Ausgaben: {0:C}}" />
+            <TextBlock Text="{Binding Budget.Revenue, StringFormat=Budgetierte Einnahmen: {0:C}}" />
             <TextBlock Text="{Binding AllExpensesTotal, StringFormat=Ausgaben: {0:C}}" />
-            <TextBlock Text="{Binding AllEarningsTotal, StringFormat=Einnahmen: {0:C}}" />
-            
+            <TextBlock Text="{Binding AllRevenueTotal, StringFormat=Einnahmen: {0:C}}" />
+
+
         </StackPanel>
         
         <DockPanel Grid.Column="1" Margin="10">
