--- a/tinyERP/tinyERP/Views/AddTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/AddTransactionView.xaml
@@ -34,24 +34,27 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung" Margin="10" ToolTip="Bezeichnung"
-                     Text="{Binding Name,Mode=TwoWay,UpdateSourceTrigger=LostFocus, ValidatesOnNotifyDataErrors=True}"/>
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="0"  Height="20" controls:TextBoxHelper.Watermark="Betrag" Margin="10" ToolTip="Betrag"
-                     Text="{Binding Amount,Mode=TwoWay,UpdateSourceTrigger=LostFocus,Converter={StaticResource MyStringToDoubleConverter}}"/>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung" Margin="10"
+                     Text="{Binding Name,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="0"  Height="20" controls:TextBoxHelper.Watermark="Betrag" Margin="10"
+                     Text="{Binding Amount,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
             <DatePicker HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="0"  Height="20" Text="Wähle ein Datum" Margin="10" 
-                        SelectedDate="{Binding Date,Mode=TwoWay}"/>
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2" controls:TextBoxHelper.Watermark="Bemerkungen" ToolTip="Bemerkung" Margin="10,10,10,0" 
-                     Text="{Binding Comment,Mode=TwoWay}"/>
+                        SelectedDate="{Binding Date,Mode=TwoWay}" ToolTip="Belegdatum auswählen"/>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2" controls:TextBoxHelper.Watermark="Bemerkungen" Margin="10,10,10,0" 
+                     Text="{Binding Comment,Mode=TwoWay,UpdateSourceTrigger=LostFocus}"/>
             <controls:SplitButton HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" 
                                   ItemsSource="{Binding CategoryList}" SelectedItem="{Binding SelectedCategory}" DisplayMemberPath="Name"
                                   VerticalAlignment="Center" ToolTip="Kategorie auswählen" Margin="10" SelectedIndex="0"/>
             <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Height="20" controls:TextBoxHelper.Watermark="Privatanteil" Margin="10" 
-                     Text="{Binding PrivatPart,Mode=TwoWay,UpdateSourceTrigger=LostFocus,ValidatesOnNotifyDataErrors=True}"/>
+                     Text="{Binding PrivatPart,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
+
+            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="10">
+                <RadioButton  GroupName="Mode" Content="Einnahme" IsChecked="{Binding IsEarning}"/>
+                <RadioButton GroupName="Mode" Content="Ausgabe" Margin="40,0"/>
+            </StackPanel>
+
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
-                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" Margin="0,0,30,0" ToolTip="Beleg hinzufügen">
-                    <iconPacks:PackIconMaterial Kind="Upload" Width="25" Height="25" />
-                </Button>
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
                         Command="{Binding NewCommand}" CommandParameter="{Binding ElementName=Buchung}" ToolTip="Buchung hinzufügen">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
