--- a/tinyERP/tinyERP/App.xaml
+++ b/tinyERP/tinyERP/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="tinyERP.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converter="clr-namespace:tinyERP.UI.Resources"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -17,6 +18,10 @@
                 <ResourceDictionary Source="Resources/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Colors.xaml"/>
                 <ResourceDictionary Source="Resources/CircleButtonExtend.xaml"/>
+                
+                <ResourceDictionary>
+                    <converter:BooleanToEarningConverter x:Key="MyBooleanToEarningConverter"/>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
