--- a/tinyERP/tinyERP/Views/OrderView.xaml
+++ b/tinyERP/tinyERP/Views/OrderView.xaml
@@ -1,19 +1,51 @@
 ﻿<UserControl x:Class="tinyERP.UI.Views.OrderView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:tinyERP"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             mc:Ignorable="d"
              d:DesignHeight="800" d:DesignWidth="1200">
-    
-    <Grid Background="White">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Orientation="Vertical">
-            <TextBlock FontSize="40" Margin="10" Height="auto">Auftragsverwaltung</TextBlock>
+
+    <DockPanel Margin="10" Background="White">
+        <TextBlock DockPanel.Dock="Top" FontSize="40" Margin="10" Height="auto">Auftragsverwaltung</TextBlock>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding NewOrderCommand}" ToolTip="Neuen Auftrag hinzufügen">
+                <iconPacks:PackIconMaterial Kind="PlusCircle" Width="40" Height="40" />
+            </Button>
+            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding EditOrderCommand}" CommandParameter="{Binding ElementName=OrdersDataGrid}" ToolTip="Auftrag bearbeiten">
+                <iconPacks:PackIconMaterial Kind="PencilBox" Width="40" Height="40" />
+            </Button>
+            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding DeleteOrdersCommand}" CommandParameter="{Binding SelectedItems, ElementName=OrdersDataGrid}" ToolTip="Auftrag löschen">
+                <iconPacks:PackIconMaterial Kind="DeleteCircle" Width="40" Height="40" />
+            </Button>
         </StackPanel>
-    </Grid>
+
+        <DataGrid x:Name="OrdersDataGrid"  AutoGenerateColumns="False" ItemsSource="{Binding OrderList}" SelectedItem="{Binding SelectedOrder}" IsReadOnly="True"
+                  CanUserReorderColumns="False"  CanUserResizeRows="False" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" 
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="0,0,0,10">
+            <DataGrid.Columns>
+                <DataGridTextColumn MinWidth="80" Width="*" Header="Nr" Binding="{Binding OrderNumber}"/>
+                <DataGridTextColumn MinWidth="140" Width="*" Header="Kunde">
+                    <DataGridTextColumn.Binding>
+                        <MultiBinding StringFormat="{}{0} {1}">
+                            <Binding Path="Customer.LastName"></Binding>
+                            <Binding Path="Customer.FirstName"></Binding>
+                        </MultiBinding>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn MinWidth="120" Width="*" Header="Status" Binding="{Binding State, Converter={StaticResource MyEnumToDescriptionConverter}}"/>
+                <DataGridTextColumn MinWidth="120" Width="*" Header="Erstellt am" Binding="{Binding CreationDate, StringFormat={}{0:dd.MM.yyyy}}"/>
+                <DataGridTextColumn MinWidth="120" Width="*" Header="Letzte Statusänderung" Binding="{Binding StateModificationDate, StringFormat={}{0:dd.MM.yyyy}}"/>
+            </DataGrid.Columns>
+            <DataGrid.InputBindings>
+                <KeyBinding Key="Enter"
+                            Command="{Binding EditOrderCommand}"
+                            CommandParameter="{Binding ElementName=OrdersDataGrid}" />
+                <KeyBinding Key="Delete"
+                            Command="{Binding DeleteOrdersCommand}"
+                            CommandParameter="{Binding SelectedItems, ElementName=OrdersDataGrid}" />
+            </DataGrid.InputBindings>
+        </DataGrid>
+    </DockPanel>
 </UserControl>
