Applied Changes from Review of US003
Fixed: initially empty search textbox now shows all entries
Fixed: Enter now triggers search
Added: Tooltip on search textbox to show what is searched for
Removed: SearchText field & property, now binding directly to
XAML-Element in view
Removed: Setting SelectedTransaction in SearchTransactions method

--- a/tinyERP/tinyERP/Views/BudgetView.xaml
+++ b/tinyERP/tinyERP/Views/BudgetView.xaml
@@ -76,8 +76,12 @@
 
         <DockPanel Grid.Column="1" Margin="10">
             <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
-                <TextBox Width="200" Height="20" Text="{Binding SearchText}" controls:TextBoxHelper.Watermark="Suchbegriff eingeben..."></TextBox>
-                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0,0,130,0" BorderThickness="0" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding SearchText}" ToolTip="Suche starten">
+                <TextBox x:Name="SearchBox" Width="200" Height="20" controls:TextBoxHelper.Watermark="Suchbegriff eingeben..." ToolTip="Suche nach Bezeichnung oder Kategorie">
+                    <TextBox.InputBindings>
+                        <KeyBinding Key="Return" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding ElementName=SearchBox, Path=Text}"></KeyBinding>
+                    </TextBox.InputBindings>
+                </TextBox>
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0,0,130,0" BorderThickness="0" Command="{Binding SearchTransactionsCommand}" CommandParameter="{Binding ElementName=SearchBox, Path=Text}" ToolTip="Suche starten">
                     <iconPacks:PackIconMaterial Kind="Magnify" Width="20" Height="20" />
                 </Button>
                 <Button x:Name="AddTransaction" Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding NewTransactionCommand}" ToolTip="Neue Buchung hinzufügen">
